--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   app:
     build: .
-    environment:
-      - DEBUG=True
+    env_file:
+      - docker-compose.env
     volumes:
       - ./magazine-crawler.log:/app/magazine-crawler.log:rw
