--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     env_file:
       - ./config/docker-compose.env
     volumes:
-      - ./data/magazine-crawler.log:/app/data/magazine-crawler.log:rw
+      - ./data/:/app/data/:rw
