--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
 beautifulsoup4==4.11.1
+black==22.6.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
+click==8.1.3
 fake-useragent==0.1.11
+flake8==5.0.4
 idna==3.3
+isort==5.10.1
+mccabe==0.7.0
 mypy==0.961
 mypy-extensions==0.4.3
 oauthlib==3.2.0
+pathspec==0.9.0
+platformdirs==2.5.2
+pycodestyle==2.9.1
+pyflakes==2.5.0
 requests==2.28.1
 requests-oauthlib==1.3.1
 soupsieve==2.3.2.post1
