--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ requests-oauthlib==1.3.1
 soupsieve==2.3.2.post1
 tomli==2.0.1
 tweepy==4.10.0
+types-beautifulsoup4==4.11.6.1
 types-requests==2.28.8
 types-urllib3==1.26.22
 typing_extensions==4.3.0
