--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,34 @@
+[tool.poetry]
+name = "magazine-crawler"
+version = "0.1.0"
+description = ""
+authors = ["Your Name <you@example.com>"]
+readme = "README.md"
+packages = [{include = "magazine_crawler"}]
+
+[tool.poetry.dependencies]
+python = "^3.11"
+beautifulsoup4 = "^4.12.0"
+fake-useragent = "^1.1.3"
+requests = "^2.28.2"
+tweepy = "^4.13.0"
+urllib3 = "^1.26.15"
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
+flake8 = "^6.0.0"
+isort = "^5.12.0"
+mypy = "^1.1.1"
+types-beautifulsoup4 = "^4.12.0.1"
+types-requests = "^2.28.11.17"
+types-urllib3 = "^1.26.25.10"
+
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+
 [tool.black]
 # 公式ドキュメント
 # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
