--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ mypy = "^1.1.1"
 types-beautifulsoup4 = "^4.12.0.1"
 types-requests = "^2.28.11.17"
 types-urllib3 = "^1.26.25.10"
+pytest = "^7.3.1"
 
 
 [build-system]
