--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,26 +17,27 @@ jobs:
         python-version: [3.11]
 
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry install --no-root
-
-    - name: Analyze the code
-      run: |
-        poetry run isort --check-only .
-        poetry run black --check .
-        poetry run flake8 .
-        poetry run mypy .
-
-    - name: Run Tests
-      run: |
-        poetry run pytest
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      -
+        name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install --no-root
+      -
+        name: Analyze the code
+        run: |
+          poetry run isort --check-only .
+          poetry run black --check .
+          poetry run flake8 .
+          poetry run mypy .
+      -
+        name: Run Tests
+        run: poetry run pytest
