--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,14 +15,14 @@ tweepy = "^4.14.0"
 urllib3 = "^1.26.15"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.3.0"
-flake8 = "^6.0.0"
-isort = "^5.12.0"
-mypy = "^1.1.1"
-types-beautifulsoup4 = "^4.12.0.1"
-types-requests = "^2.30.0.0"
-types-urllib3 = "^1.26.25.12"
-pytest = "^7.3.1"
+black = "*"
+flake8 = "*"
+isort = "*"
+mypy = "*"
+types-beautifulsoup4 = "*"
+types-requests = "*"
+types-urllib3 = "*"
+pytest = "*"
 
 
 [build-system]
