--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       max-parallel: 4
       matrix:
         # python 3.10 is default version of Ubuntu 22.04 LTS
-        python-version: [3.11]
+        python-version: ["3.10", "3.11"]
 
     steps:
       -
