--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,9 +11,13 @@ updates:
       interval: "weekly"
     assignees:
       - "ytgw"
+    cooldown:
+      default-days: 14
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
     assignees:
       - "ytgw"
+    cooldown:
+      default-days: 14
