--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -17,7 +17,7 @@ jobs:
     uses: ./.github/workflows/test.yml
   build:
     needs: test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     steps:
       -
         name: Checkout
